fix x overflow problem 🔴

--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100%;
     scroll-snap-align: start;
+    overflow: hidden;
 }
 
 .video_card__reel {
